# dynamic-static

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FMOD.cmake  bullet3.cmake  dynamic-static.build.cmake  glm.cmake  googletest.cmake  gvk.cmake  stb_truetype.cmake
dynamic-static.audio/: CMakeLists.txt
dynamic-static.audio/include/dynamic-static.audio/: context.hpp  defines.hpp
dynamic-static.audio/source/dynamic-static.audio/: context.cpp  placeholder.cpp
dynamic-static.audio/tests/: placeholder.tests.cpp
dynamic-static.core/: CMakeLists.txt
dynamic-static.core/include/dynamic-static/: bin-pack.hpp  defines.hpp  filesystem.hpp  finite-state-machine.hpp  hash-combine.hpp  image.hpp  random.hpp  state-machine.hpp  text.hpp  type-id.hpp
dynamic-static.core/source/dynamic-static/: filesystem.cpp  image.cpp  placeholder.cpp  text.cpp
dynamic-static.core/tests/: finite-state-machine.tests.cpp  placeholder.tests.cpp  random.tests.cpp
dynamic-static.graphics/: CMakeLists.txt
dynamic-static.graphics/include/dynamic-static.graphics/: buffer.hpp  coordinate-renderer.hpp  defines.hpp  line-renderer.hpp  primitives.hpp  renderer.hpp  sprite-renderer.hpp  sprite.hpp  text.hpp
dynamic-static.graphics/source/dynamic-static.graphics/: buffer.cpp  coordinate-renderer.cpp  line-renderer.cpp  placeholder.cpp  renderer.cpp  sprite-renderer.cpp  sprite.cpp  text.cpp
dynamic-static.graphics/tests/: placeholder.tests.cpp
dynamic-static.physics/: CMakeLists.txt
dynamic-static.physics/include/dynamic-static.physics/: collider.hpp  context.hpp  material.hpp  rigid-body.hpp  world.hpp
dynamic-static.physics/source/dynamic-static.physics/: collider.cpp  context.cpp  material.cpp  rigid-body.cpp  world.cpp
dynamic-static.physics/tests/: placeholder.tests.cpp
samples/: CMakeLists.txt  block-blaster.cpp  brick-breaker.cpp  dynamic-static.sample-utilities.hpp  placeholder.cpp  shape-shooter.cpp
samples/shape-shooter/: CMakeLists.txt
samples/shape-shooter/include/shape-shooter/: audio.hpp  bullet.hpp  camera.hpp  context.hpp  defines.hpp  enemy-spawner.hpp  enemy.hpp  entity-manager.hpp  entity.hpp  grid.hpp  input-manager.hpp  input.hpp  particle-manager.hpp  particle-state.hpp  particle.hpp  player-ship.hpp  player-status.hpp  ring-buffer.hpp  score-board.hpp  utilities.hpp
samples/shape-shooter/source/shape-shooter/: audio.cpp  bullet.cpp  camera.cpp  context.cpp  enemy-spawner.cpp  enemy.cpp  entity-manager.cpp  entity.cpp  grid.cpp  input-manager.cpp  particle-manager.cpp  particle.cpp  player-ship.cpp  score-board.cpp  shape-shooter.cpp  utilities.cpp
